Added more tags

--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
             <div class="tags-container">
                 <h4>recipes</h4>
                 <div class="tags-list">
-                    <a href="tag-template.html">Beef (1)</a>
-                    <a href="tag-template.html">Beef (2)</a>
-                    <a href="tag-template.html">Beef (3)</a>
-                    <a href="tag-template.html">Beef (4)</a>
+                    <a href="tag-template.html">Pelau</a>
+                    <a href="tag-template.html">Grenadian Chicken Stew</a>
+                    <a href="tag-template.html">Oil Down</a>
+                    <a href="tag-template.html">Grenadian Spice Cake</a>
+                    <a href="tag-template.html">Rum Punch</a>
+                    <a href="tag-template.html">Caribbean beef patties</a>
+                    <a href="tag-template.html">Jerk chicken with rice & peas</a>
+                    <a href="tag-template.html">Nutmeg Chicken</a>
+                    <a href="tag-template.html">Grenadian Coconut Lamb Curry</a>
+                    <a href="tag-template.html">Grenadian bake & fishcake</a>
                 </div>
             </div>
             <!-- end of tags container -->
@@ -73,17 +79,32 @@
                 <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipe/recipe_4.jpg" alt="spoons"
                     class="img recipe-img"/>
-                    <h5>Carne Asada</h5>
-                    <p>Prep : 15mins | Cook : 5mins</p>
+                    <div class="card-body">
+                        <h5>Carne Asada</h5>
+                        <div class="rating">
+                            <span>
+                                <i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                        <p>Prep: 1hr 20min</p>
+                    </div>
                 </a>
+                    
                 <!-- end of single recipe -->
 
                 <!-- Single recipe -->
                 <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipe/recipe_2.jpg" alt="spoons"
                     class="img recipe-img"/>
-                    <h5>Pelau</h5>
-                    <p>Prep : 15mins | Cook : 5mins</p>
+                    <div class="card-body">
+                        <h5>Pelau</h5>
+                        <div class="rating">
+                            <span>
+                                <i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                        <p>Prep : 15mins</p>
+                    </div>
                 </a>
                 <!-- end of single recipe -->
 
@@ -91,8 +112,15 @@
                 <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipe/recipe_3.jpg" alt="spoons"
                     class="img recipe-img"/>
-                    <h5>Oil-down</h5>
-                    <p>Prep : 15mins | Cook : 5mins</p>
+                    <div class="card-body">
+                        <h5>Oil-down</h5>
+                        <div class="rating">
+                            <span>
+                                <i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                        <p>Prep : 15mins</p>
+                    </div>
                 </a>
                 <!-- end of single recipe -->
             </div>
