fixing each html page

--- a/spiceCake-recipe.html
+++ b/spiceCake-recipe.html
@@ -52,6 +52,11 @@
                       Caribbean or spicy dinner. Serve with fresh seasonal fruits and a dusting of
                       confectioners' sugar.
                   </p>
+                 <p>
+                    Spice cake is one of those delectable treats that completes the autumn season!
+                    This is something you'll want to create!
+                </p>
+
 
                     <!-- recipe icons -->
                     <div class="recipe-icons">
@@ -65,13 +70,13 @@
                         <article>
                             <i class="far fa-clock"></i>
                             <h5>cook time</h5>
-                            <p>15 mins</p>
+                            <p> 1hr 30mins</p>
                         </article>
                         <!-- single recipe icon -->
                         <article>
                             <i class="fas fa-user"></i>
                             <h5>servings</h5>
-                            <p>6 servings</p>
+                            <p>12 servings</p>
                         </article>
                     </div>
 
@@ -95,7 +100,11 @@
                       <p>Step 1</p>
                       <div></div>
                   </header>
-                  <p>Over high heat, heat you pot</p>
+                  <p>
+                      Preheat oven to 350 degrees F (175 degrees C). Grease a 9x5 inch loaf pan.
+                      Sift together the flour, baking powder and salt, set aside.
+                  </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -103,7 +112,13 @@
                       <p>Step 2</p>
                       <div></div>
                   </header>
-                  <p>When the pot is hot, add the oil, followed by the brown sugar.</p>
+                  <p>
+                      In a medium bowl, cream together the sugar and butter. Beat in the eggs one at
+                      a time, then stir in the lime zest, nutmeg, cinnamon and allspice. Add the dry
+                      ingredients alternately with the milk, stirring after each addition. Pour
+                      batter into the prepared pan.
+                  </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -112,169 +127,51 @@
                       <div></div>
                   </header>
                   <p>
-                    When the sugar starts to bubble and caramelize, stir constantly with a pot
-                    spoon until it turns a rich amber color with a hint of black jack.
-                </p>
+                      Bake for 75 to 90 minutes in the preheated oven, until a toothpick inserted
+                      comes out clean. Cool in the pan for 10 minutes before turning out onto a rack
+                      to cool completely.
+                  </p>
+              </div>
 
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 4</p>
-                      <div></div>
-                  </header>
-                 <p>
-                    Add the seasoned chicken pieces to the pot right away and toss to uniformly
-                    coat them in caramelized sugar. Allow 10 minutes for the chicken to simmer
-                    (brown).
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 5</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Reduce to medium heat, add the rice, and completely combine with the chicken.
-                    Allow 4–5 minutes for the rice to parch or brown with the chicken to produce a
-                    nutty taste and caramel color.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 6</p>
-                      <div></div>
-                  </header>
-                  <p>Add the pigeon peas, then the garlic, onions, chives, pimentos, and pumpkin.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 7</p>
-                      <div></div>
-                  </header>
-                 <p>
-                    Combine the coconut powder and water in the pot. The rice should be completely
-                    submerged in water. Stir in the aromatics, then add the entire pepper, cover,
-                    and cook on a low heat. (Approximately 8–10 minutes)
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 8</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Remove the lid after this time and add the carrots and corn. Stir to
-                    incorporate, and at this stage, check the rice for doneness. If it's still a
-                    touch hard or near to being done, add a little more water and cover the pot to
-                    simmer for a few minutes longer. However, if the Pelau is still damp and near
-                    to being done, keep it uncovered to enable the extra water to evaporate.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 9</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Season with salt and pepper after adding the chadon beni and salted butter.
-                    Season with salt and pepper to taste, and stir well to combine all
-                    ingredients, preventing the bottom from burning.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 10</p>
-                      <div></div>
-                  </header>
-                  <p>Carry on like this until you've achieved the required uniformity.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 11</p>
-                      <div></div>
-                  </header>
-                  <p>Allow 15 minutes for the flavors to merge and set after removing from the heat.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 12</p>
-                      <div></div>
-                  </header>
-                 <p>Serve on its own or with coleslaw for a delicious side dish.</p>
-
-              </div>
+             
           </article>
           <article class="second-column">
               <div>
                   <h4>Ingredients</h4>
                   <p class="single-ingredients">
-                    3 Tbsp Vegetable Oil
+                    2 cups sifted all-purpose flour
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Brown Sugar
+                    ½ teaspoon baking powder
                   </p>
                   <p class="single-ingredients">
-                    1 Whole Seasoned Chicken (Cut into Pieces)
+                    ⅛ teaspoon salt
                   </p>
                   <p class="single-ingredients">
-                    2¼ Cups Rice
+                    1 ½ cups white sugar
                   </p>
                   <p class="single-ingredients">
-                    1 Tin of Pigeon Peas
+                    1 cup unsalted butter - chilled, cut into tablespoon-size pieces
                   </p>
                   <p class="single-ingredients">
-                    6 Cloves of Garlic (Finely Minced)
+                    1 ½ teaspoons grated lime zest
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Onions (Finely Minced)
+                    1 teaspoon ground nutmeg
                   </p>
                   <p class="single-ingredients">
-                    2 Bundles Chives (Chopped)
+                    ½ teaspoon ground cinnamon
                   </p>
                   <p class="single-ingredients">
-                    6 Pimento Peppers (Finely Minced)
+                    ¼ teaspoon ground allspice
                   </p>
                   <p class="single-ingredients">
-                    1¼ Cup Pumpkin (Cubed)
+                    3 eggs
                   </p>
                   <p class="single-ingredients">
-                    ¼ Cup Coconut Milk
+                    ½ cup milk
                   </p>
-                  <p class="single-ingredients">
-                    Water (About 4 Cups)
-                  </p>
-                  <p class="single-ingredients">
-                    1 Whole Scotch Bonnet Pepper
-                  </p>
-                  <p class="single-ingredients">
-                    ¾ Cup Carrots (Cubed)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    2 Bundles Chadon Beni/Culantro (Finely Chopped)
-                  </p>
-                  <p class="single-ingredients">
-                    Salt and Black Pepper to taste
-                  </p>
+                  
               </div>
 
               <div>
