--- a/coconutLamb-recipe.html
+++ b/coconutLamb-recipe.html
@@ -44,7 +44,7 @@
     <main class="page">
       <div class="recipe-page">
           <section class="recipe-hero">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/-xjmpnShweU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" requestFullscreen()></iframe> 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/-xjmpnShweU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullscreen></iframe> 
               <article>
                   <h2>Grenadian Coconut Lamb Curry</h2>
                  <p>
@@ -118,7 +118,11 @@
                       <p>Step 1</p>
                       <div></div>
                   </header>
-                  <p>Over high heat, heat you pot</p>
+                 <p>
+                    Trim meat, cut into bite-size pieces and wash in a mixture of water and
+                    vinegar.
+                </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -126,7 +130,12 @@
                       <p>Step 2</p>
                       <div></div>
                   </header>
-                  <p>When the pot is hot, add the oil, followed by the brown sugar.</p>
+                  <p>
+                      Add 1 tablespoon curry powder, chopped onion, escallion, garlic, ginger,
+                      thyme, scotch bonnet pepper, black pepper and salt; rub the seasonings into
+                      the meat, cover and put to marinate for two hours.
+                  </p>
+
               </div>
               <!-- single instruction -->
               <div class="single-instruction">
@@ -135,9 +144,12 @@
                       <div></div>
                   </header>
                   <p>
-                    When the sugar starts to bubble and caramelize, stir constantly with a pot
-                    spoon until it turns a rich amber color with a hint of black jack.
-                </p>
+                      Heat vegetable oil in a heavy bottom skillet over medium heat and add the
+                      remaining one tablespoon curry powder. Add the marinated meat and allow to
+                      sear. Turn the meat and add 4 cups boiling water. Cover and allow to simmer
+                      for about 1 hour 20 minutes or until the meat is tender.
+                  </p>
+
 
               </div>
               <!-- single instruction -->
@@ -147,156 +159,60 @@
                       <div></div>
                   </header>
                  <p>
-                    Add the seasoned chicken pieces to the pot right away and toss to uniformly
-                    coat them in caramelized sugar. Allow 10 minutes for the chicken to simmer
-                    (brown).
+                    Add the diced potato and cook for 5 minutes. Fold in the sliced carrot and
+                    pimento berries and cook for five minutes.
                 </p>
+              </div>
 
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 5</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Reduce to medium heat, add the rice, and completely combine with the chicken.
-                    Allow 4–5 minutes for the rice to parch or brown with the chicken to produce a
-                    nutty taste and caramel color.
-                </p>
 
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 6</p>
-                      <div></div>
-                  </header>
-                  <p>Add the pigeon peas, then the garlic, onions, chives, pimentos, and pumpkin.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 7</p>
-                      <div></div>
-                  </header>
-                 <p>
-                    Combine the coconut powder and water in the pot. The rice should be completely
-                    submerged in water. Stir in the aromatics, then add the entire pepper, cover,
-                    and cook on a low heat. (Approximately 8–10 minutes)
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 8</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Remove the lid after this time and add the carrots and corn. Stir to
-                    incorporate, and at this stage, check the rice for doneness. If it's still a
-                    touch hard or near to being done, add a little more water and cover the pot to
-                    simmer for a few minutes longer. However, if the Pelau is still damp and near
-                    to being done, keep it uncovered to enable the extra water to evaporate.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 9</p>
-                      <div></div>
-                  </header>
-                  <p>
-                    Season with salt and pepper after adding the chadon beni and salted butter.
-                    Season with salt and pepper to taste, and stir well to combine all
-                    ingredients, preventing the bottom from burning.
-                </p>
-
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 10</p>
-                      <div></div>
-                  </header>
-                  <p>Carry on like this until you've achieved the required uniformity.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 11</p>
-                      <div></div>
-                  </header>
-                  <p>Allow 15 minutes for the flavors to merge and set after removing from the heat.</p>
-              </div>
-              <!-- single instruction -->
-              <div class="single-instruction">
-                  <header>
-                      <p>Step 12</p>
-                      <div></div>
-                  </header>
-                 <p>Serve on its own or with coleslaw for a delicious side dish.</p>
-
-              </div>
           </article>
           <article class="second-column">
               <div>
                   <h4>Ingredients</h4>
                   <p class="single-ingredients">
-                    3 Tbsp Vegetable Oil
+                    3 pound(s) goat meat
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Brown Sugar
+                    2 tablespoon(s) Grace White Vinegar
                   </p>
                   <p class="single-ingredients">
-                    1 Whole Seasoned Chicken (Cut into Pieces)
+                    2 tablespoon(s) curry powder
                   </p>
                   <p class="single-ingredients">
-                    2¼ Cups Rice
+                    1 medium onion, chopped
                   </p>
                   <p class="single-ingredients">
-                    1 Tin of Pigeon Peas
+                    2 stalk(s) escallion, chopped
                   </p>
                   <p class="single-ingredients">
-                    6 Cloves of Garlic (Finely Minced)
+                    4 clove(s) garlic, chopped
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Onions (Finely Minced)
+                    1 teaspoon(s) ginger, chopped
                   </p>
                   <p class="single-ingredients">
-                    2 Bundles Chives (Chopped)
+                    2 teaspoon(s) thyme, chopped
                   </p>
                   <p class="single-ingredients">
-                    6 Pimento Peppers (Finely Minced)
+                    1/2 whole scotch bonnet pepper, chopped
                   </p>
                   <p class="single-ingredients">
-                    1¼ Cup Pumpkin (Cubed)
+                    1 teaspoon(s) black pepper
                   </p>
                   <p class="single-ingredients">
-                    ¼ Cup Coconut Milk
+                    1/4 cup(s) Grace Vegetable Oil
                   </p>
                   <p class="single-ingredients">
-                    Water (About 4 Cups)
+                    4 cup(s) boiling water
                   </p>
                   <p class="single-ingredients">
-                    1 Whole Scotch Bonnet Pepper
+                    1 large Irish potato, diced
                   </p>
                   <p class="single-ingredients">
-                    ¾ Cup Carrots (Cubed)
+                    1 medium carrot, sliced
                   </p>
                   <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    ½ Cup Corn Kernels (Optional)
-                  </p>
-                  <p class="single-ingredients">
-                    2 Bundles Chadon Beni/Culantro (Finely Chopped)
-                  </p>
-                  <p class="single-ingredients">
-                    Salt and Black Pepper to taste
+                    4 whole pimento berries, crushed
                   </p>
               </div>
 
